--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -19,7 +19,7 @@
                     <b>Join the challenge using the form to the right so we can count your savings toward our goal.</b>
                 </p>
                 <p>
-                    <fb:login-button id="facebook_login"></fb:login-button>
+                    <fb:login-button id="facebook_login" perms="email,publish_stream,offline_access"></fb:login-button>
                 </p>
             </div>
             <div style="width:300px; float:left;">
