--- a/groups/templates/groups/_group_disc_nugget.html
+++ b/groups/templates/groups/_group_disc_nugget.html
@@ -32,7 +32,7 @@
         </div>
         <div class="grid_3 omega">
             <div class="comment_author">
-                <img class="gravatar" src="{{ disc.user.get_profile.get_gravatar_url }}" alt="user gravatar" width="52" height="52"/>
+                <img class="gravatar" src="{{ disc.user.get_profile.profile_picture }}" alt="user gravatar" width="52" height="52"/>
                 <br class="clear" />
                 {% safe_user_link disc.user %}
             </div>
