--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -35,7 +35,7 @@
         </div>
         <div class="grid_3 omega">
             <div class="comment_author">
-                <img class="gravatar" src="{{ comment.user.get_profile.get_gravatar_url }}" alt="user gravatar" width="52" height="52"/>
+                <img class="gravatar" src="{{ comment.user.get_profile.profile_picture }}" alt="user gravatar" width="52" height="52"/>
                 <br class="clear" />
                 {% safe_user_link comment.user %}
             </div>
