--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -9,7 +9,9 @@
         </ul>
         <div id="account_tab">
             <p>
-                <a href="http://en.gravatar.com/" target="_blank">Change your avatar on gravatar.com</a><br/>
+                {% if "www.gravatar.com" in profile.profile_picture %}
+                    <a href="http://en.gravatar.com/" target="_blank">Change your avatar on gravatar.com</a><br/>
+                {% endif %}
                 {% if not profile.facebook_connect_only %}
                     <a href="{% url password_change %}">Change your password</a><br/>
                 {% endif %}
