moved the base facebook init code to base.js, so it can be used on all pages (needed if we are going to add a facebook connect button to the tongue)

--- a/templates/base.html
+++ b/templates/base.html
@@ -127,6 +127,7 @@
         <div id="message_box">
             {% include '_messages.html' %}
         </div>
+        <div id="fb-root"></div>
         <script type="text/javascript" charset="utf-8">
             var rah_name = "{% block js %}{% endblock %}";
             var media_url = "{{ MEDIA_URL }}"; // contains trailing slash
@@ -137,6 +138,10 @@
         {% else %}
             <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/js_libs_min.js' %}"></script>
         {% endif %}
+        <script src="http://connect.facebook.net/en_US/all.js"></script>
+        <script>
+            FB.init({appId: '{{ FACEBOOK_APPID }}', status: true, cookie: true, xfbml: true});
+        </script>
         {% block extrajs %}{% endblock %}
         {% if debug %}
             <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/rah.js' %}"></script>
