updated the kickoff event type commitment card. [completed: 400]

--- a/events/templates/events/_volunteer_form.html
+++ b/events/templates/events/_volunteer_form.html
@@ -4,12 +4,10 @@
 <br />
 <form action="" method="post">
     <p>
-        <h3>How did you hear about the meeting?</h3>
+        <h3>Commit to take action in your own home</h3>
         <ul>
-            <li>{{ form.phone }}{{ form.phone.label_tag }}</li>
-            <li>{{ form.flyer }}{{ form.flyer.label_tag }}</li>
-            <li>{{ form.email }}{{ form.email.label_tag }}</li>
-            <li>{{ form.mouth }}{{ form.mouth.label_tag }}</li>
+            <li>{{ form.eliminate_vampire }}{{ form.eliminate_vampire.label_tag }}</li>
+            <li>{{ form.program_thermostat }}{{ form.program_thermostat.label_tag }}</li>
         </ul>
     </p>
     <p>
