--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,8 +48,10 @@ a:active { color: #6EC3D1; text-decoration:underline; }
 h1, h1 a {
     font-family:"superclarendon-1", "superclarendon-2", serif;
     font-weight:700;
-    font-style: normal; 
+    font-style: normal;
+    visibility: hidden;
     color: #ed6623;}
+.wf-active h1, .wf-active h1 a {visibility: visible;}
 h2, h3, h4, h5, h6 { font-weight:bold; color: #6e9b31; }
 h1 { font-size: 30px; line-height:45px; margin-bottom:9px; }
 h2 { font-size: 24px; line-height:27px; margin-bottom:9px; }
@@ -971,8 +973,10 @@ JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI
     font-weight:700;
     font-size: 14px;
     font-style: normal;
+    visibility: hidden;
     text-shadow: #333 1px 1px 1px;
     display: inline-block; position: relative; padding: 0; margin-right: .1em; text-decoration: none !important; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
+.wf-active .ui-button {visibility: visible;}
 .ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
 button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a little more width */
 .ui-button-icons-only { width: 3.4em; } 
