Adding more open graph meta data to action pages.  [completed: 403]

--- a/actions/templates/actions/action_detail.html
+++ b/actions/templates/actions/action_detail.html
@@ -3,6 +3,9 @@
 {% block meta_desc %}{{action.name}}: {{action.teaser}}{% endblock %}
 {% block extrahead %}
     <meta property="og:image" content="http://repowerathome.com{{ action.get_detail_illustration }}" />
+    <meta property="og:type" content="activity" />
+    <meta property="og:title" content="{{action.name}}" />
+    <meta property="og:description" content="{{action.teaser}}" />
 {% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
