--- a/templates/invite/events/invite.html
+++ b/templates/invite/events/invite.html
@@ -1,6 +1,6 @@
 <p>
     Hi,<br />
-    {{ from_user.get_full_name }} wants you to attend an {{ invite.content_object }}.
+    {{ from_user.get_full_name }} wants you to attend the Repower at Home event: {{ invite.content_object }}.
 </p>
 <p>
     <a href="http://{{ domain }}{% url event-invite invite.content_object.id invite.token %}">
