--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -36,7 +36,11 @@
                     </b>
                 </p>
                 <p>
-                    <fb:login-button id="facebook_login" perms="email,publish_stream,offline_access">Join with Facebook</fb:login-button>
+                    <div class="fb_button" id="fb-login">
+                        <a href="#" class="fb_button fb_button_medium">
+                            <span id="fb_login_text" class="fb_button_text">Join with Facebook</span>
+                        </a>
+                    </div>
                 </p>
             </div>
             <div style="width:270px; float:left;">
