--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -33,11 +33,11 @@
             </form>
         </div>
         <div id="notifications_tab">
-            <form id="group_notifications_form" action="" method="post" autocomplete="false">
+            <form id="notifications_form" action="" method="post" autocomplete="false">
                 {% with group_notification_form.notifications as field %}
                     <div id="team_notifications" class="form_row overset {% if field.errors %}error{% endif %}">
                         {{ field.label_tag }}
-                        <div id="team_selectors" class="hidden">
+                        <div class="notification_selectors" class="hidden">
                             <a class="selector select_all" href="">Select All</a> |
                             <a class="selector deselect_all" href="">Deselect All</a>
                         </div>
@@ -54,7 +54,28 @@
                         {% endif %}
                     </div>
                 {% endwith %}
-                <p><input type="submit" name="edit_group_notifications" value="Save notifications" /></p>
+                <br />
+                {% with stream_notification_form.stream_notifications as field %}
+                    <div id="stream_notifications" class="form_row overset {% if field.errors %}error{% endif %}">
+                        {{ field.label_tag }}
+                        <div class="notification_selectors" class="hidden">
+                            <a class="selector select_all" href="">Select All</a> |
+                            <a class="selector deselect_all" href="">Deselect All</a>
+                        </div>
+                        {{ field }}
+                        {% if field.help_text %}
+                            <div class="help_text">{{ field.help_text }}</div>
+                        {% endif %}
+                        {% if field.errors %}
+                            <label class="error" for="{{ field.auto_id }}">
+                                {% for error in field.errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </label>
+                        {% endif %}
+                    </div>
+                {% endwith %}
+                <p><input type="submit" name="edit_notifications" value="Save notifications" /></p>
                 {% csrf_token %}
             </form>
         </div>
