added option for users to suppress the 'ask to share' dialog. #389

--- a/records/templates/records/_ask_to_share.html
+++ b/records/templates/records/_ask_to_share.html
@@ -26,4 +26,8 @@
     <input type="submit" value="Share"></input> | 
     <a id="ask_to_share_cancel" href="{% url profile_edit request.user.id %}">no thanks</a>
     {% csrf_token %}
+    <br />
+    <div class="form_row smaller">
+        <a href="{% url records_dont_ask_again %}">please don't ask me this again</a>
+    </div>
 </form>
