Last minute changes made to get register page working in IE. Still needs a more permenant fix for TypeKit. upgraded webfontloader lib, moved facebook js to https, rewrote youtube links to route through our own server.

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -13,15 +13,15 @@
 
             {# <h1 class="center">Join the Coal Challenge</h1> #}
             <p class="center">
-            <object width="675" height="404"><param name="movie" value="http://www.youtube.com/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="675" height="404"></embed></object>
+            <object width="675" height="404"><param name="movie" value="https://repowerathome.com/youtube/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="675" height="404"></embed></object>
             
-            {# <object width="480" height="295"><param name="movie" value="http://www.youtube.com/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="480" height="295"></embed></object> #}
+            {# <object width="480" height="295"><param name="movie" value="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="480" height="295"></embed></object> #}
             </p>
             {# <br class="clear" /> #}
             <div style="width:360px; float:left; padding-right:15px; margin-right:15px; border-right:1px solid #ccc">
                 <h1>Join the Challenge</h1>
                 {# <p> #}
-                {# <object width="360" height="227"><param name="movie" value="http://www.youtube.com/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="360" height="227"></embed></object> #}
+                {# <object width="360" height="227"><param name="movie" value="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0&amp;hd=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="360" height="227"></embed></object> #}
                 {# </p> #}
                 <h3>Solve the climate crisis from the ground up.</h3>
                 <p>
@@ -41,7 +41,7 @@
             </div>
             <div style="width:270px; float:left;">
                 {# <p> #}
-                {#     <object width="308" height="198"><param name="movie" value="http://www.youtube.com/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="308" height="198"></embed></object> #}
+                {#     <object width="308" height="198"><param name="movie" value="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/cbDNupks3Kg&amp;hl=en_US&amp;fs=1?rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="308" height="198"></embed></object> #}
                 {# </p> #}
                 <form action="{% url register %}" method="post" id="registration_form" autocomplete="off">
                     <div class="form_row overset form_row_float form_row_float_left_field">
