--- a/templates/base.html
+++ b/templates/base.html
@@ -138,7 +138,7 @@
         {% else %}
             <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/js_libs_min.js' %}"></script>
         {% endif %}
-        <script  type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
+        <script  type="text/javascript" src="https://connect.facebook.net/en_US/all.js"></script>
         <script type="text/javascript">
             FB.init({appId: '{{ FACEBOOK_APPID }}', status: true, cookie: true, xfbml: true});
         </script>
