Fixing a bug introduced by Eric's fiddling about. total_points was being overwritten by the user's total points

--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -24,7 +24,7 @@
         have taken
         <div>{{total_actions}} actions</div>
         to keep
-        <div>{{total_points}} lbs of coal</div>
+        <div>{{total_coal}} lbs of coal</div>
         out of our air!
     </div>
 </div>
